force-app/main/default/objects/Account/fields/AcceptableItemsSinceLastInteraction__c.field-meta.xml
<CustomField>
    <fullName>AcceptableItemsSinceLastInteraction__c</fullName>
    <description>The number of items deemed acceptable since the last Coaching Interaction was closed.</description>
    <inlineHelpText>The number of items deemed acceptable since the last Coaching Interaction was closed.</inlineHelpText>
    <label>Acceptable Items since last interaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>