force-app/main/default/objects/Account/fields/AgreementAcceptableItems__c.field-meta.xml
<CustomField>
    <fullName>AgreementAcceptableItems__c</fullName>
    <description>The number of items deemed acceptable at the time the last Coaching Interaction was closed.</description>
    <inlineHelpText>The number of items deemed acceptable at the time the last Coaching Interaction was closed.</inlineHelpText>
    <label>Acceptable Items at last interaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>