force-app/main/default/objects/Account/fields/AgreementReviewedItems__c.field-meta.xml
<CustomField>
    <fullName>AgreementReviewedItems__c</fullName>
    <description>The number of items reviewed at the time the last Coaching Interaction was closed.</description>
    <inlineHelpText>The number of items reviewed at the time the last Coaching Interaction was closed.</inlineHelpText>
    <label>Reviewed Items at last interaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>