force-app/main/default/objects/Account/fields/CoachingLevel__c.field-meta.xml
<CustomField>
    <fullName>CoachingLevel__c</fullName>
    <description>The coaching level defines the level of coaching for an author.  This is a read-only field.</description>
    <label>Coaching Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Passive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>