force-app/main/default/objects/Account/fields/ContentTrustStage__c.field-meta.xml
<CustomField>
    <fullName>ContentTrustStage__c</fullName>
    <description>The stage this author is within the Author Management's Content Trust Pipeline.</description>
    <label>Content Trust Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContentPipelineStages</valueSetName>
    </valueSet>
</CustomField>