force-app/main/default/objects/Account/fields/DaysSinceLastClosedInteraction__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastClosedInteraction__c</fullName>
    <description>Calculates the number of days from today and the date of the last interaction with a status of closed.</description>
    <formula>NOW()  -  LastClosedInteractionDate__c</formula>
    <label>Days Since Last Closed Interaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>