force-app/main/default/objects/Account/fields/Elements_Contributor__c.field-meta.xml
<CustomField>
    <fullName>Elements_Contributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elements Contributor</label>
    <type>Checkbox</type>
</CustomField>