force-app/main/default/objects/Account/fields/Envato_Market_User_URL__c.field-meta.xml
<CustomField>
    <fullName>Envato_Market_User_URL__c</fullName>
    <label>Envato Market User URL</label>
    <type>Url</type>
</CustomField>