force-app/main/default/objects/Account/fields/HasOpenInteractions__c.field-meta.xml
<CustomField>
    <fullName>HasOpenInteractions__c</fullName>
    <formula>IF( OpenInteractionsCount__c > 0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Open Interactions</label>
    <type>Checkbox</type>
</CustomField>