force-app/main/default/objects/Account/fields/Incentivized__c.field-meta.xml
<CustomField>
    <fullName>Incentivized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentivized</label>
    <type>Checkbox</type>
</CustomField>