force-app/main/default/objects/Account/fields/LastClosedInteractionDate__c.field-meta.xml
<CustomField>
    <fullName>LastClosedInteractionDate__c</fullName>
    <description>This field contains the date/time associated with the last closed interaction date. This value is rolled up to the author to allow a formula field to calculate the days since last interaction.</description>
    <label>Last Closed Interaction Date</label>
    <type>DateTime</type>
</CustomField>