force-app/main/default/objects/Account/fields/LifetimeQualityScore__c.field-meta.xml
<CustomField>
    <fullName>LifetimeQualityScore__c</fullName>
    <description>The Author's Quality Score based on all items reviewed and those deemed acceptable.</description>
    <label>Lifetime Quality Score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>