force-app/main/default/objects/Account/fields/LiveQualityScore__c.field-meta.xml
<CustomField>
    <fullName>LiveQualityScore__c</fullName>
    <description>The Author's Quality Score since the last Coaching Interaction.</description>
    <label>Live Quality Score</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>