force-app/main/default/objects/Account/fields/MonthlyUploadsCommitment__c.field-meta.xml
<CustomField>
    <fullName>MonthlyUploadsCommitment__c</fullName>
    <description>The number of uploads per month the author has committed to make</description>
    <label>Monthly Uploads Commitment</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>