force-app/main/default/objects/Account/fields/OpenInteractionsCount__c.field-meta.xml
<CustomField>
    <fullName>OpenInteractionsCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of open interactions associated with an author.</description>
    <label>Open Interactions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>