force-app/main/default/objects/Account/fields/PhotoDune_Only__c.field-meta.xml
<CustomField>
    <fullName>PhotoDune_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PhotoDune Only</label>
    <type>Checkbox</type>
</CustomField>