force-app/main/default/objects/Account/fields/Portfolio_URL__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_URL__c</fullName>
    <label>Portfolio URL</label>
    <type>Url</type>
</CustomField>