force-app/main/default/objects/Account/fields/QualityImprovementIndicator__c.field-meta.xml
<CustomField>
    <fullName>QualityImprovementIndicator__c</fullName>
    <description>The improvement (+/-) for an author based on the last agreement score and their live quality score.</description>
    <inlineHelpText>The improvement (+/-) for an author based on the last agreement score and their live quality score.</inlineHelpText>
    <label>Quality Improvement Indicator</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>