force-app/main/default/objects/Account/fields/ReportLastClosedInteractionDate__c.field-meta.xml
<CustomField>
    <fullName>ReportLastClosedInteractionDate__c</fullName>
    <description>Last Closed Interaction Date formatted as yyyy-mm-dd for reporting purposes.</description>
    <formula>IF( ISBLANK(  LastClosedInteractionDate__c  ), 
null, 
 TEXT( YEAR( DATEVALUE(LastClosedInteractionDate__c) ) ) + "-" +
 LPAD(TEXT( MONTH( DATEVALUE(LastClosedInteractionDate__c) ) ) , 2, "0" ) + "-" + 
 LPAD(TEXT( DAY( DATEVALUE(LastClosedInteractionDate__c) ) ) , 2, "0" ) 
)</formula>
    <label>Report Last Closed Interaction Date</label>
    <type>Text</type>
</CustomField>