force-app/main/default/objects/Account/fields/ReportTodaysDate__c.field-meta.xml
<CustomField>
    <fullName>ReportTodaysDate__c</fullName>
    <description>Today's date formatted as yyyy-mm-dd for reporting purposes.</description>
    <formula>TEXT( YEAR(  TODAY()  ) ) + "-" + 
LPAD(TEXT( MONTH(  TODAY()  ) ) , 2, "0" ) + "-" + 
LPAD(TEXT( DAY(  TODAY()  ) ) , 2, "0" )</formula>
    <label>Report Today's Date</label>
    <type>Text</type>
</CustomField>