force-app/main/default/objects/Account/fields/ReviewedItemsSinceLastInteraction__c.field-meta.xml
<CustomField>
    <fullName>ReviewedItemsSinceLastInteraction__c</fullName>
    <description>The number of items deemed reviewed since the last interaction.</description>
    <inlineHelpText>The number of items deemed reviewed since the last interaction.</inlineHelpText>
    <label>Reviewed Items since last interaction</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>