force-app/main/default/objects/Account/fields/TotalAcceptableItems__c.field-meta.xml
<CustomField>
    <fullName>TotalAcceptableItems__c</fullName>
    <description>The number of items deemed acceptable from the total of items reviewed.</description>
    <label>Total Acceptable Items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>