force-app/main/default/objects/Account/fields/TotalReviewedItems__c.field-meta.xml
<CustomField>
    <fullName>TotalReviewedItems__c</fullName>
    <description>The number of items reviewed.</description>
    <label>Total Reviewed Items</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>