force-app/main/default/objects/Account/fields/UUID__c.field-meta.xml
<CustomField>
    <fullName>UUID__c</fullName>
    <description>The unique identifier for the author as represented in the marketplace.</description>
    <externalId>true</externalId>
    <label>UUID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>