force-app/main/default/objects/Account/listViews/Quality_Assessment_Passed_Low_Volume1.listView-meta.xml
<ListView>
    <fullName>Quality_Assessment_Passed_Low_Volume1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LifetimeQualityScore__c</columns>
    <columns>ContentTrustStage__c</columns>
    <columns>LiveQualityScore__c</columns>
    <columns>ReviewedItemsSinceLastInteraction__c</columns>
    <columns>DaysSinceLastClosedInteraction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DaysSinceLastClosedInteraction__c</field>
        <operation>greaterThan</operation>
        <value>30</value>
    </filters>
    <filters>
        <field>LiveQualityScore__c</field>
        <operation>greaterOrEqual</operation>
        <value>40</value>
    </filters>
    <filters>
        <field>ReviewedItemsSinceLastInteraction__c</field>
        <operation>greaterThan</operation>
        <value>10</value>
    </filters>
    <filters>
        <field>ReviewedItemsSinceLastInteraction__c</field>
        <operation>lessThan</operation>
        <value>200</value>
    </filters>
    <filters>
        <field>HasOpenInteractions__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Quality Assessment Passed - Low Volume</label>
</ListView>